# ABAPify

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  x.md
abapify/cli/: commands.py  config_commands.py  main.py  sap_commands.py
abapify/core/: generator.py
abapify/llm/: client.py
abapify/llm/providers/: arcee_provider.py  groq_provider.py  openai_provider.py
abapify/prompts/: enhanced_system_prompts.py  system_prompts.py  user_prompts.py
abapify/sap/: __init__.py  auth.py  connection.py  exceptions.py  init.py  metadata_analyzer.py  models.py
abapify/sap/clients/: __init__.py  http_client.py  init.py  rfc_client.py
abapify/utils/: config.py  exceptions.py  logger.py
tests/: test_cli.py  test_llm.py
